@@ -23,11 +23,12 @@ public class CorsConfig {
         // 프론트엔드 URL 목록
         configuration.setAllowedOrigins(allowedOrigins);
 
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowedHeaders(List.of("*"));
 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST","PUT", "DELETE", "PATCH", "OPTIONS"));
 
         configuration.setAllowCredentials(true);
+
         configuration.setMaxAge(3600L); // 캐시 시간 1시간
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
